[project]
name = "stac-cache"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "duckdb>=1.2.0",
    "httpx>=0.28.1",
    "ipython>=8.32.0",
    "pyarrow>=19.0.0",
    "pystac>=1.12.1",
    "pystac-client>=0.8.5",
    "retry>=0.9.2",
    "s3fs>=2025.2.0",
    "stac-geoparquet>=0.6.0",
    "stacrs>=0.4.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
]

[tool.uv.sources]
stacrs = { git = "https://github.com/gadomski/stacrs" }
